--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -45,12 +45,34 @@ body {
 
 /* Fuentes para encabezados y párrafos con estilo pixelado */
 h2, h3, h4, h5 {
-  font-family: 'Press Start 2P', monospace; /* Fuente estilo pixelado */
+  font-family: 'Press Start 2P', monospace;
   font-weight: bold;
   color: #000000;
   margin-bottom: 10px;
   line-height: 1.3;
   text-align: center;
+  hyphens: auto;
+}
+
+/* Pantallas medianas (tablets y móviles en horizontal) */
+@media (max-width: 1024px) {
+  h2, h3, h4, h5 {
+    font-size: 35px;
+  }
+}
+
+/* Pantallas pequeñas (móviles en vertical) */
+@media (max-width: 768px) {
+  h2, h3, h4, h5 {
+    font-size: 25px;
+  }
+}
+
+/* Pantallas muy pequeñas (celulares pequeños) */
+@media (max-width: 480px) {
+  h2, h3, h4, h5 {
+    font-size: 20px;
+  }
 }
 
 p {
@@ -60,6 +82,26 @@ p {
   color: #000000;
   margin-bottom: 1.5rem;
   text-align: justify;
+  hyphens: auto;
+}
+@media (max-width: 1024px) {
+  p {
+    font-size: 15px;
+  }
+}
+
+/* Pantallas pequeñas (móviles en vertical) */
+@media (max-width: 768px) {
+  p {
+    font-size: 12px;
+  }
+}
+
+/* Pantallas muy pequeñas (celulares pequeños) */
+@media (max-width: 480px) {
+  p {
+    font-size: 10px;
+  }
 }
 
 /* Contenedor de imagen y texto */
