--- a/portfolio/src/styles/ContactForm.css
+++ b/portfolio/src/styles/ContactForm.css
@@ -2,8 +2,9 @@
 .contact-form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
   max-width: 800px;
+  min-height: 350px;
   margin: 0 auto;
   padding: 20px;
   background-color: #c0c0c0; 
@@ -19,7 +20,7 @@
   padding: 10px;
   border: 2px solid #000000; 
   border-radius: 0; 
-  font-size: 14px;
+  font-size: 15px;
   width: 100%; 
   box-sizing: border-box; 
   background-color: #ffffff; 
@@ -35,7 +36,7 @@
 
 /* Estilos para el botón de envío */
 .contact-form .send-button {
-  padding: 12px;
+  padding: 20px;
   background-color: #000080; 
   color: white;
   border: 2px solid #000000;
@@ -47,7 +48,7 @@
 }
 
 .contact-form .send-button:hover {
-  background-color: #0000cd; /* Azul más brillante al hacer hover */
+  background-color: #0000cd; 
 }
 
 /* Estilo para los mensajes de éxito o error */
@@ -59,11 +60,4 @@
 .error-message {
   color: red;
   font-weight: bold;
-}
-
-/* Ajustes para la responsividad (opcional) */
-@media (max-width: 600px) {
-  .contact-form {
-    width: 90%; 
-  }
 }
