--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -26,21 +26,37 @@ body {
 }
 /* Imagen circular */
 .image {
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 350px;
   display: block;
 }
 
-/* Barra de título */
-.title-bar {
-  background: #c0c0c0;
-  border-bottom: 2px solid black;
-  padding: 5px;
+/* Pantallas pequeñas (móviles en vertical) */
+@media (max-width: 768px) {
+  .image {
+    width: 200px;
+    height: 200px;
+  }
 }
 
-.title-bar-text {
+/* Pantallas muy pequeñas (celulares pequeños) */
+@media (max-width: 480px) {
+  .image {
+    width: 150px;
+    height: 150px;
+  }
+}
+
+.text-container-wrapper {
+  background-color: #ffffff;
+  border: 2px solid #000000;
+  padding: 20px;
+  margin-top: 20px;
+  position: relative;
+  z-index: 2;
+
+  box-shadow: inset 3px 3px 5px #808080, inset -2px -2px 5px #ffffff;
   font-family: 'MS Sans Serif', sans-serif;
-  font-size: 16px;
 }
 
 /* Fuentes para encabezados y párrafos con estilo pixelado */
@@ -48,7 +64,7 @@ h2, h3, h4, h5 {
   font-family: 'Press Start 2P', monospace;
   font-weight: bold;
   color: #000000;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   line-height: 1.3;
   text-align: center;
   hyphens: auto;
@@ -107,19 +123,19 @@ p {
 /* Contenedor de imagen y texto */
 .image-and-text {
   display: flex;
-  align-items: center; /* Centra verticalmente los elementos */
-  gap: 20px; /* Espacio entre la imagen y el párrafo */
+  align-items: center; 
+  gap: 20px; 
 }
 
 @media (max-width: 768px) {
   .image-and-text {
-    flex-direction: column; /* Pone el texto debajo de la imagen */
-    align-items: center; /* Centra los elementos en pantalla pequeña */
-    text-align: center; /* Centra el texto */
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
 
   .image-and-text p {
-    margin-top: 10px; /* Espacio entre la imagen y el párrafo */
+    margin-top: 10px;
   }
 }
 
@@ -127,13 +143,30 @@ p {
 .technologies {
   display: flex;
   justify-content: center;
-  gap: 20px; /* Espacio entre los íconos */
-  margin-top: 5px; /* Espacio superior */
+  gap: 20px;
+  margin-top: 10px;
+  padding: 10px;
+  margin-left: 300px;
+  
 }
 
 .technologies svg {
-  font-size: 40px; /* Tamaño de los íconos */
+  font-size: 40px; 
   color: #000000;
+}
+
+/* Pantallas pequeñas (móviles en vertical) */
+@media (max-width: 768px) {
+  .technologies {
+    margin-top: 20px;
+  }
+}
+
+/* Pantallas muy pequeñas (celulares pequeños) */
+@media (max-width: 480px) {
+  .technologies {
+    margin-top: 15px;
+  }
 }
 
 .footer {
@@ -161,42 +194,82 @@ p {
 }
 
 .window {
-  display: flex;
-  flex: 1;
-  width: 100%;
+  width: 90%;
   max-width: 1200px;
-  margin: 0 auto;
-  border: 2px solid #808080;
-  background-color: white;
-  box-sizing: border-box;
-  position: relative;
-  z-index: 1; /* Asegura que las ventanas estén encima de los iconos */
+  min-height: 650px;
+  margin: 2rem auto;
+  background-color: #c0c0c0;
+  border: 2px solid #000;
+  box-shadow: inset -2px -2px #fff, inset 2px 2px #808080;
+  font-family: 'MS Sans Serif', sans-serif;
 }
 
+.window-titlebar {
+  background: #000080;
+  color: white;
+  padding: 4px 8px;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: inset -1px -1px #000, inset 1px 1px #808080;
+  height: 40px;
+  
+}
+.title-bar-text {
+  margin-left: 4px;
+  font-size: 16px; 
+  font-weight: bold; 
+}
+
+.window-titlebar-buttons {
+  display: flex;
+  gap: 4px;
+}
+
+.window-titlebar-button {
+  width: 16px;
+  height: 16px;
+  background-color: #c0c0c0;
+  border: 2px solid #fff;
+  box-shadow: -1px -1px #808080, 1px 1px #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+  cursor: pointer;
+  color: black;
+}
+
+.window-titlebar-button:active {
+  box-shadow: inset 1px 1px #808080, inset -1px -1px #fff;
+}
+
+
 @media screen and (max-width: 768px) {
-  /* En pantallas pequeñas, reducimos el tamaño de la ventana */
+ 
   .window {
-    max-width: 90%; /* Limitar el ancho a un 90% */
-    width: 90%; /* Esto asegura que se ajuste correctamente */
+    max-width: 90%; 
+    width: 90%; 
   }
 }
 
 /* Aseguramos que el contenido de la ventana ocupe todo el espacio disponible */
 .window-body {
-  flex: 1; 
-  padding: 20px;
-  width: 100%; 
-  box-sizing: border-box; 
-  overflow-y: auto;
+  flex: 1;
+  padding: 20px; 
+  box-sizing: border-box;
+  overflow: hidden;
+  min-height: 650px;
 
   /* Estilo Windows 98 */
-  background-color: #c0c0c0; 
-  border: 2px solid #808080; 
-  font-family: 'MS Sans Serif', sans-serif; 
-  font-size: 14px; 
-  color: black; 
-  
-  /* Opcional: borde de estilo 3D */
+  background-color: #c0c0c0;
+  border: 2px solid #808080;
+  font-family: 'MS Sans Serif', sans-serif;
+  font-size: 14px;
+  color: black;
+
+  /* Borde 3D estilo Win98 */
   box-shadow: inset 1px 1px 3px #fff, inset -1px -1px 3px #808080;
 }
 
@@ -220,7 +293,7 @@ p {
 /* Botón de inicio con sombra estilo Windows 98 */
 .toolbar .start-button {
   background-color: transparent;
-  border: 2px solid #808080; /* Borde gris oscuro */
+  border: 2px solid #808080; 
   padding: 5px 10px;
   height: 25px;
   font-family: 'Press Start 2P', monospace;
@@ -230,10 +303,10 @@ p {
   font-size: 16px;
   display: flex;
   align-items: center;
-  box-shadow: inset 1px 1px 3px #fff, inset -1px -1px 3px #808080,  /* Sombra interna para el efecto 3D */
-              1px 1px 3px #000, /* Sombra externa para que resalte */
-              -1px -1px 3px #fff; /* Sombra externa en dirección opuesta */
-  border-radius: 2px; /* Bordes redondeados para el estilo retro */
+  box-shadow: inset 1px 1px 3px #fff, inset -1px -1px 3px #808080,  
+              1px 1px 3px #000, 
+              -1px -1px 3px #fff; 
+  border-radius: 2px; 
 }
 
 /* Texto Start */
@@ -249,13 +322,13 @@ p {
 .toolbar .start-button:hover {
   background-color: #a0a0a0;
   box-shadow: inset 1px 1px 3px #fff, inset -1px -1px 3px #808080, 
-              1px 1px 3px #000, -1px -1px 3px #fff, /* Se intensifica la sombra */
-              0 0 10px rgba(0, 0, 0, 0.3); /* Agregar una sombra adicional al hacer hover */
+              1px 1px 3px #000, -1px -1px 3px #fff, 
+              0 0 10px rgba(0, 0, 0, 0.3); 
 }
 
 .toolbar .clock {
   margin-left: auto; 
-  font-family: 'MS Sans Serif', sans-serif; /* Fuente clásica de Windows 98 */
+  font-family: 'MS Sans Serif', sans-serif; 
   font-size: 14px; 
   font-weight: bold;
   display: flex;
@@ -263,7 +336,7 @@ p {
   align-items: center;
   width: 120px;
   height: 24px; 
-  overflow: hidden; /* Evita que el contenido se desborde */
+  overflow: hidden; 
 }
 
 /* Iconos estilo Windows 98 */
@@ -284,7 +357,7 @@ p {
     left: 13.5px;
     position: absolute; 
     width: 100%; 
-    flex-direction: row; /* Cambiamos la dirección de los iconos de columna a fila, de derecha a izquierda */
+    flex-direction: row; 
     justify-content: flex-start; 
   }
 }
@@ -323,8 +396,8 @@ p {
 }
 
 .play-button {
-  display: block; /* Hace que el botón ocupe toda la línea */
-  margin: 0 auto; /* Centra el botón horizontalmente */
+  display: block; 
+  margin: 0 auto; 
   width: 100px;
   padding: 10px;
   font-size: 16px;
