--- a/portfolio/src/styles/ContactInfo.css
+++ b/portfolio/src/styles/ContactInfo.css
@@ -3,7 +3,8 @@
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin-top: 20px;
+ 
+  margin-bottom: 10px;
 }
 
 /* Estilo para los íconos de contacto */
@@ -11,7 +12,7 @@
   font-size: 2rem;
   color: #000080; 
   text-decoration: none;
-  background-color: #c0c0c0; 
+  background-color: #ffffff; 
   padding: 8px;
   border: 2px solid #000000; 
   border-radius: 4px; 
@@ -28,6 +29,6 @@
 /* Ajustes para pantallas más pequeñas */
 @media (max-width: 600px) {
   .contact-icon {
-    font-size: 1.5rem; /* Reducción del tamaño de los íconos en pantallas más pequeñas */
+    font-size: 1.5rem; 
   }
 }
