--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -63,7 +63,6 @@ h2, h3, h4, h5 {
   font-weight: bold;
   color: #000000;
   margin-bottom: 5px;
-  line-height: 1.3;
   text-align: center;
   hyphens: auto;
 }
@@ -190,7 +189,7 @@ p {
 
 /* El contenedor .desktop ocupa toda la pantalla */
 .desktop {
-  padding-top: 100px;
+  padding-top: 50px;
 }
 
 .window {
@@ -257,11 +256,9 @@ p {
 /* Aseguramos que el contenido de la ventana ocupe todo el espacio disponible */
 .window-body {
   flex: 1;
-  padding: 20px; 
   box-sizing: border-box;
   overflow: hidden;
   min-height: 650px;
-  padding-bottom: 60px;
   /* Estilo Windows 98 */
   background-color: #c0c0c0;
   border: 2px solid #808080;
@@ -410,4 +407,16 @@ p {
 
 .play-button:hover {
   background-color: #a0a0a0;
+}
+
+.card-proyectos-container {
+  display: flex;
+  flex-wrap: wrap; /* permite que bajen a la siguiente fila */
+  gap: 1rem;
+  justify-content: center;
+}
+
+.card-proyectos-container > * {
+  flex: 1 1 250px; /* cada card ocupa mínimo 250px */
+  max-width: 300px; /* opcional: para que no se hagan demasiado grandes */
 }
